FFR-4341 -> FFR-4828 text overlapping issue fixed

--- a/assets/scss/adul-css.scss
+++ b/assets/scss/adul-css.scss
@@ -14,7 +14,7 @@ input { border-radius:4px !important; }
 h1, .abt-other-profile h1, .homepage-title, .homepage-title-small {font-weight: normal !important;color: $common-text-color !important; font-family: "Poppins-Medium" !important; font-size: 36px !important; line-height: 46px !important;}
 h2 {color: $common-text-color !important; font-family: "Poppins-Medium" !important;font-size: 20px !important; line-height: 27px !important;font-weight: normal !important;}
 h3, .show-review-detail .reply-msg-heading h3, #shop-user-item-slider h3, .map-wrapper .listing h3, .my-msg-heading h3, 
-.manage-item-list h3, .featured-profile-list h3, .map-wrapper .listing h3, h3.homepage-title {font-weight: normal !important;color: $common-text-color !important; font-family: "Poppins-SemiBold" !important;font-size: 18px !important; line-height: 24px !important;}
+.manage-item-list h3, .featured-profile-list h3, .map-wrapper .listing h3, h3.homepage-title {font-weight: normal !important;color: $common-text-color !important; font-family: "Poppins-SemiBold" !important;font-size: 18px !important; line-height: 22px !important;}
 h4, .paa-help-text h4, .vif-rec-slider .slots-3 .rec-slider-info h4, .rec-slider-info h4 {font-weight: normal !important;color: $common-text-color !important; font-family: "Poppins-SemiBold" !important;font-size: 16px !important; line-height: 21px !important;}
 h5 {font-weight: normal !important;color: $common-text-color !important; font-family: "Poppins-SemiBold" !important;font-size: 14px !important; line-height: 21px !important;}
 
